# CMAKE_CPP_EXE_TEMPLATE

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
cmake/: Utils.cmake
include/: main.hpp
src/: main.cpp
test/: CMakeLists.txt  test_main.cpp
